--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@types/node": "^16.4.6",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.41",
     "axios": "^0.21.1",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.4"
   }
 }
