Added conditional DROP databases on start

--- a/.env_template
+++ b/.env_template
@@ -4,4 +4,5 @@ DB_USER = <DB user>
 DB_PASSWORD = <DB password>
 DB_PORT = 5432
 DB_HOST = localhost
-DB_SSL = False # True/False
+DB_SSL = False  # True/False
+START_DROP_TABLES = True  # Drop all tables on each start
